--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <div class="container-fluid py-5" id="testimonial">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Témoignages</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Avis</h1>
                 <h1 class="position-absolute text-uppercase text-primary">Ce qu'ils disent</h1>
             </div>
             <div class="row justify-content-center">
